platform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gene-saver-platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /testpath
          pathType: Prefix
          backend:
            service:
              name: gene-saver-platform
              port:
                number: 4040
